--- a/html/register_2.html
+++ b/html/register_2.html
@@ -86,7 +86,7 @@
                     <span class="focus-input100"></span>
                 </div>
                 <div class="container-contact100-form-btn">
-                    <button class="contact100-form-btn">
+                    <button id="btn-submit" class="contact100-form-btn">
                         Đăng ký
                     </button>
                 </div>
@@ -108,6 +108,11 @@
 
     <script src="js/select2.min.js"></script>
     <script>
+
+        $("#btn-submit").click(function() {
+            window.location.href = "complete.html"
+        })
+
         $(".js-select2").each(function () {
             $(this).select2({
                 minimumResultsForSearch: 10,
