--- a/html/otp.html
+++ b/html/otp.html
@@ -81,7 +81,7 @@
     <script src="js/select2.min.js"></script>
     <script>
         $("#btn-register").click(function() {
-            window.location.href = "/register_2.html"
+            window.location.href = "register_2.html"
         })
         $(".js-select2").each(function () {
             $(this).select2({
