--- a/html/otp.html
+++ b/html/otp.html
@@ -81,7 +81,8 @@
     <script src="js/select2.min.js"></script>
     <script>
         $("#btn-register").click(function() {
-            window.location.href = "register_2.html"
+            window.location.href = "https://trungndpc.github.io/insee/html/register_2.html"
+            return false;
         })
         $(".js-select2").each(function () {
             $(this).select2({
