--- a/html/complete.html
+++ b/html/complete.html
@@ -69,9 +69,11 @@
     <script>
         $("#btn-to-zalo").click(function() {
             window.location.href = "https://zalo.me/428332895304538762";
+            return false;
         })
         $("#btn-click-to-insee-page").click(function() {
             window.location.href = "http://insee.g-sid.com/index.html";
+            return false;
         });
         $(".js-select2").each(function () {
             $(this).select2({
