--- a/html/register_2.html
+++ b/html/register_2.html
@@ -39,7 +39,7 @@
                     <div class="line-bt"></div>
                 </span>
                 <div class="form-description">Vui lòng nhập thông tin để tạo tài khoản</div>
-                <div class="wrap-input100 validate-input" data-validate="Name is required">
+                <div class="wrap-input100" >
                     <input id="name" class="input100" type="text" name="name" placeholder="Họ và tên">
                     <span class="focus-input100"></span>
                 </div>
@@ -72,7 +72,7 @@
                     <span class="focus-input100"></span>
                 </div>
                 
-                <div class="wrap-input100 validate-input">
+                <div class="wrap-input100">
                     <input id="name" class="input100" type="text" placeholder="Mật khẩu đăng nhập">
                     <span class="focus-input100"></span>
                 </div>
