--- a/html/register.html
+++ b/html/register.html
@@ -38,7 +38,7 @@
                     Đăng ký
                     <div class="line-bt"></div>
                 </span>
-                <div class="wrap-input100 validate-input" >
+                <div class="wrap-input100 " >
                     <input id="sdt" class="input100" type="text" name="name" placeholder="Nhập số điện thoại">
                     <span class="focus-input100"></span>
                 </div>
