--- a/html/register.html
+++ b/html/register.html
@@ -67,6 +67,7 @@
     <script>
         $("#btn-register-phone").click(function() {
             window.location.href = "otp.html";
+            return  false;
         })
         $(".js-select2").each(function () {
             $(this).select2({
