--- a/html/register_2.html
+++ b/html/register_2.html
@@ -111,6 +111,7 @@
 
         $("#btn-submit").click(function() {
             window.location.href = "complete.html"
+            return false;
         })
 
         $(".js-select2").each(function () {
