--- a/web/index.html
+++ b/web/index.html
@@ -24,14 +24,14 @@
                 <figure><img src="images/resources/timeline-1.jpg" alt=""></figure>
                 <div class="container-fluid">
                     <div class="row merged">
-                        <div class="col-lg-2 col-sm-3">
+                        <div class="col-lg-2 col-4">
                             <div class="user-avatar">
                                 <figure>
                                     <img src="images/resources/user-avatar.jpg" alt="">
                                 </figure>
                             </div>
                         </div>
-                        <div class="col-lg-10 col-sm-9">
+                        <div class="col-lg-10 col-8">
                             <div class="timeline-info">
                                 <ul>
                                     <li class="admin-name">
